--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,16 +22,18 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.34",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.23.0",
     "jest": "^28",
+    "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.0.1",
     "lefthook": "^1.3.9",
     "prettier": "^2.7.1",
