--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -14,8 +14,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["node", "jest", "@testing-library/jest-dom"]
   },
+
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
