--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,11 +1,10 @@
 {
   "name": "client",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "tsc --project tsconfig.server.json && cross-env NODE_ENV=development node server/index.js",
+    "build": "tsc --project tsconfig.server.json && vite build && vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "preview": "node server/index.js",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "jest ./"
@@ -13,13 +12,16 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.6.0",
-    "antd": "^5.24.1",
+    "ant-design-layout": "^4.9.11",
+    "antd": "5.24.1",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
+    "express": "^4.21.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "vite": "^3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
@@ -40,7 +42,6 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2",
-    "vite": "^3.1",
     "vite-plugin-pwa": "0.21.1"
   },
   "license": "MIT"
