fix db and sequalize

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -23,7 +23,8 @@
     "types": ["node", "jest"],
     "baseUrl": "./server",
     "paths": {
-      "*": ["types/*"]
+      "*": ["types/*"],
+      "models/*": ["server/models/*.ts"]
     },
     "outDir": "dist"
   }
