add models (Category, Posts) add controllers, routes

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "jest .",
-    "seed:users": "ts-node seeders/users/users.seeder.ts"
+    "seed:users": "ts-node seeders/users/users.seeder.ts",
+    "seed:categories": "ts-node seeders/categories/categories.seeder.ts",
+    "seed:posts": "ts-node seeders/posts/posts.seeder.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
