--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,7 @@ SERVER_PORT=3005
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+POSTGRES_HOST_DEV=localhost
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 MODE=development| production
