--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,7 +107,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ./tmp/pgdata:/var/lib/postgresql/data
+      - ./tmp/postgresql/data:/var/lib/postgresql/data
     networks:
       - game
   pgadmin:
