--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,7 +2,8 @@
   "name": "client",
   "version": "0.0.0",
   "scripts": {
-    "dev": "tsc --project tsconfig.server.json && cross-env NODE_ENV=development node server/index.js",
+    "devv": "tsc --project tsconfig.server.json && cross-env NODE_ENV=development node server/index.js",
+    "dev": "tsc --project tsconfig.server.json && cross-env NODE_ENV=development nodemon server/index.js",
     "build": "tsc --project tsconfig.server.json && vite build && vite build --ssr src/entry-server.tsx --outDir dist/server",
     "preview": "node server/index.js",
     "lint": "eslint .",
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@ant-design/static-style-extract": "^1.0.3",
     "@reduxjs/toolkit": "^2.6.0",
     "ant-design-layout": "^4.9.11",
     "antd": "5.24.1",
@@ -24,6 +26,7 @@
     "vite": "^3.1"
   },
   "devDependencies": {
+    "@ant-design/static-style-extract": "^1.0.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -39,6 +42,7 @@
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.0.1",
     "lefthook": "^1.3.9",
+    "nodemon": "^3.1.10",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2",
