--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,14 +14,17 @@
     "seed:posts": "ts-node seeders/posts/posts.seeder.ts",
     "seed:comments": "ts-node seeders/comments/comments.seeder.ts",
     "seed:reactions": "ts-node seeders/reactions/reactions.seeder.ts",
-    "seed:themes": "ts-node seeders/themes/themes.seeder.ts"
+    "seed:themes": "ts-node seeders/themes/themes.seeder.ts",
+    "seed": "yarn run seed:themes && yarn run seed:users && yarn run seed:categories && yarn run seed:posts && yarn run seed:comments && yarn run seed:reactions"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.2.2",
