--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   client:
     container_name: prakticum-client
@@ -69,7 +67,7 @@ services:
       ]
   server-dev:
     container_name: prakticum-server-dev
-    image: prackticum-server-dev
+    image: prakticum-server-dev
     build:
       context: .
       dockerfile: Dockerfile.server
@@ -81,6 +79,11 @@ services:
       - '${SERVER_PORT}:${SERVER_PORT}'
     environment:
       SERVER_PORT: ${SERVER_PORT}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     depends_on:
       - postgres
     networks:
@@ -89,14 +92,7 @@ services:
       - ./packages/server/index.ts:/app/index.ts
       - ./packages/server/db.ts:/app/db.ts
       - ./.env:/app/.env
-    command:
-      [
-        './scripts/wait-for-it.sh',
-        'postgres:${POSTGRES_PORT}',
-        '--',
-        'yarn',
-        'dev',
-      ]
+    command: yarn dev
 
   postgres:
     image: postgres:latest
