--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -43,6 +43,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-pwa": "0.21.1"
   },
   "license": "MIT"
