--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,17 @@
-CLIENT_PORT=3011
 CLIENT_SERVER_PORT=3000
-REACT_APP_CLIENT_SERVER_PORT=3000
-SERVER_PORT=3005
+CLIENT_SERVER_HOST=client
+SERVER_PORT=3001
+SERVER_HOST=server
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-POSTGRES_HOST_DEV=localhost
-POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
+POSTGRES_HOST=postgres
 MODE=development| production
 PGADMIN_EMAIL=admin@admin.com
 PGADMIN_PASSWORD=secret
 PGADMIN_LISTEN_PORT=80
+HOST=localhost
 
-VITE_API_HOST=localhost
+VITE_API_HOST=server
 VITE_API_SERVER_PORT=3001
