--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^2.6.0",
     "ant-design-layout": "^4.9.11",
-    "antd": "5.24.1",
+    "antd": "^5.25.1",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.21.2",
