--- a/old_docker/docker-compose.yml
+++ b/old_docker/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: prakticum-client
     image: prakticum-client
     build:
-      context: .
-      dockerfile: Dockerfile.client
+      context: ..
+      dockerfile: ../Dockerfile.client
       target: production
       args:
         CLIENT_PORT: ${CLIENT_SERVER_PORT}
@@ -21,8 +21,8 @@ services:
     container_name: prakticum-client-dev
     image: prakticum-client-dev
     build:
-      context: .
-      dockerfile: Dockerfile.client
+      context: ..
+      dockerfile: ../Dockerfile.client
       target: development
       args:
         CLIENT_PORT: ${CLIENT_SERVER_PORT}
@@ -40,7 +40,7 @@ services:
     container_name: prakticum-server
     image: prackicum-server
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile.server
       target: production
       args:
@@ -71,7 +71,7 @@ services:
     container_name: prakticum-server-dev
     image: prackticum-server-dev
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile.server
       target: development
       args:
