--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "client",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "dev": "tsc --project tsconfig.server.json && cross-env NODE_ENV=development node server/index.js",
     "build": "tsc --project tsconfig.server.json && vite build && vite build --ssr src/entry-server.tsx --outDir dist/server",
@@ -27,24 +30,25 @@
     "vite": "^3.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.34",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^2.0.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-jest": "^26.9.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28",
     "jest-css-modules-transform": "^4.4.2",
-    "jest-environment-jsdom": "^29.0.1",
+    "jest-environment-jsdom": "^28.1.3",
     "lefthook": "^1.3.9",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
@@ -52,5 +56,9 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-pwa": "0.21.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "volta": {
+    "node": "16.20.2",
+    "yarn": "1.22.22"
+  }
 }
