--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "description": "",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "build": "tsc --p ./tsconfig.prod.json",
     "preview": "node ./dist/index.js",
@@ -49,5 +52,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "volta": {
+    "node": "16.20.2",
+    "yarn": "1.22.22"
+  }
 }
