--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,73 +1,11 @@
 version: '3.9'
 
 services:
-  client:
-    container_name: client
-    build:
-      context: .
-      dockerfile: Dockerfile.client.dev
-      args:
-        CLIENT_SERVER_PORT: ${CLIENT_SERVER_PORT}
-    restart: always
-    expose:
-      - '${CLIENT_SERVER_PORT}'
-    depends_on:
-      - server
-    environment:
-      - CLIENT_SERVER_PORT=${CLIENT_SERVER_PORT}
-    networks:
-      - game
-    volumes:
-      - ./packages/client/src:/app/src
-      - ./packages/client/server:/app/server
-
-  server:
-    container_name: server
-    build:
-      context: .
-      dockerfile: Dockerfile.server.dev
-      args:
-        SERVER_PORT: ${SERVER_PORT}
-    restart: always
-    expose:
-      - '${SERVER_PORT}'
-    environment:
-      SERVER_PORT: ${SERVER_PORT}
-    depends_on:
-      - postgres
-    networks:
-      - game
-    volumes:
-      - ./packages/server/index.ts:/app/index.ts
-      - ./packages/server/db.ts:/app/db.ts
-      - ./.env:/app/.env
-    command:
-      - ./scripts/wait-for-it.sh
-      - "postgres:${POSTGRES_PORT}"
-      - --
-      - yarn
-      - dev
-
-  nginx:
-    container_name: nginx
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    image: prakticum-nginx
-    restart: always
-    ports:
-      - '80:80'
-    depends_on:
-      - client
-      - server
-    networks:
-      - game
-
   postgres:
     container_name: postgres
     image: postgres:latest
-    expose:
-      - '${POSTGRES_PORT}'
+    ports:
+      - '${POSTGRES_PORT}:${POSTGRES_PORT}'
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
