--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -66,8 +66,8 @@ services:
   postgres:
     container_name: postgres
     image: postgres:latest
-    expose:
-      - '${POSTGRES_PORT}'
+    ports:
+      - '${POSTGRES_PORT}:5432'
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
