--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "ant-design-layout": "^4.9.11",
     "antd": "^5.25.1",
+    "cross-fetch": "^4.1.0",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.21.2",
@@ -34,6 +35,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^28.1.8",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.34",
