--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@runcode/server",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "engines": {
     "node": ">=16.0.0"
@@ -9,7 +8,7 @@
   "scripts": {
     "build": "tsc --p ./tsconfig.prod.json",
     "preview": "node ./dist/index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --exec ts-node index.ts",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
@@ -37,6 +36,7 @@
     "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@eslint/js": "^8.57.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
@@ -50,7 +50,8 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "typescript-eslint": "^0.0.1-alpha.0"
   },
   "license": "MIT",
   "volta": {
