--- a/Dockerfile.server.prod
+++ b/Dockerfile.server.prod
@@ -8,7 +8,7 @@ RUN yarn install --frozen-lockfile
 COPY . .
 RUN yarn lerna bootstrap
 
-RUN yarn build --scope=server
+RUN yarn build --scope=@runcode/server
 
 FROM node:${NODE_VERSION}-buster-slim AS production
 WORKDIR /app
@@ -17,7 +17,8 @@ COPY --from=builder /app/packages/server/dist/ ./
 COPY --from=builder /app/packages/server/package.json ./
 
 COPY --from=builder /app/scripts/wait-for-it.sh ./scripts/wait-for-it.sh
-RUN chmod +x ./scripts/wait-for-it.sh
+RUN sed -i 's/\r$//' ./scripts/wait-for-it.sh && \
+    chmod +x ./scripts/wait-for-it.sh
 
 RUN yarn install --production --frozen-lockfile
 
