--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,8 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "build": "tsc --p ./tsconfig.prod.json",
+    "clean": "rimraf dist",
+    "build": "yarn clean && tsc --p ./tsconfig.prod.json",
     "preview": "node ./dist/index.js",
     "dev": "cross-env NODE_ENV=development nodemon --exec ts-node index.ts",
     "lint": "eslint .",
@@ -48,6 +49,7 @@
     "jest": "^28",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "rimraf": "3.0.2",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
