DEV-44 Исправить ошибки линтера

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,7 @@
     "build": "yarn clean && tsc --p ./tsconfig.prod.json",
     "preview": "node ./dist/index.js",
     "dev": "cross-env NODE_ENV=development nodemon --exec ts-node index.ts",
-    "lint": "eslint .",
+    "lint": "eslint \"**/*.ts\" --ignore-pattern dist/",
     "format": "prettier --write .",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "seed:users": "ts-node seeders/users/users.seeder.ts",
