--- a/packages/server/tsconfig.prod.json
+++ b/packages/server/tsconfig.prod.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig",
+  "include": ["**/*.ts", "**/*.json"],
   "exclude": ["**/*.test.ts", "**/*.mock.ts", "**/__test__"]
 }
